# decoding-free-marginalization

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  RUNNING.md  adapters.py  analysis.py  baselines.py  conftest.py  experiments.py  lattice.py  marginal.py  notebook.ipynb  pyproject.toml  requirements.txt  sampling.py  scoring.py  validate.py
.github/workflows/: tests.yml
results/: README.md
tests/: test_baselines.py  test_lattice.py  test_marginal.py  toy.py
